- Added __attribute__ stuff for ircsprintf() to catch more warnings.
- Fixed win32 compile problem. Reported by Troco (#0001644).
- Added a missing ',' to the version.c.SH script reported by docco (#0001643)
- Added conf check for too large spamfilter regex + reason field. Reported by
  Z3l3zT (#0001648).
- Added spamfilters for the Nkie worm
- Fixed a little sqline recode memory leak
- Fixed /spamfilter removal problem... often the wrong entry was removed [!] or
  nothing was removed at all. Reported by MiNdErAsR, RealCFC and others (#0001669).
- Fixed /spamfilter reason field bug.. things were double escaped sometimes,
  especially in post-RC2-cvs this was noticable. Reported by Fury (#0001670).
- help.conf: updated snomasks section.
- Added a patch by baafie to fix a problem where environment variables could not
  be specified in the Config script (#0001657)
- Imported TRE 0.6.6 on Win32 and Linux
- Made use of TRE's pkg-config support to solve a problem with libintl reported by
  raistlinmajere (#0001592)
- Fixed a problem with /stats S and extended channel modes (#0001675) reported by
  AngryWolf
- Fixed a resolver problem that could cause hosts to not be resolved on some Windows
  systems
- Fixed a problem where the win32 GUI's "rehash all" option did not reload motd/rules
  (#0001678) reported by w00t
- Made some changes to the win32 setup script to make it work with the latest version
  of Inno Setup (4.2.0)
- Made the setup script use the new compression method 'lzma' which makes the setup.exe
  ~300Kb smaller. Now also requires Inno Setup 4.1.6 (tested with 4.2.0).
- Usermode 'r' (registered) was unset even in case of "case"-nickchanges (like:
  'Syzop' -> 'syzop'). This affected f.e. ircservices. Reported by LoVeR (#0001679).
- spamfilter.conf: changed a lot of rules from 'block' to 'gline', left some
  on 'block' however if there was some (very low) chance on false positives (even though
  just like 0.01%).