@@ -3064,3 +3064,5 @@ seen. gmtime warning still there
 - spamfilter.conf: changed a lot of rules from 'block' to 'gline', left some
   on 'block' however if there was some (very low) chance on false positives (even though
   just like 0.01%).
+- Fixed an SVSMODE #chan -qaohv bug that would cause the user to be able to readd the mode
+  (#0001690) reported by auspice
